--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
-  <meta charset="UTF-8">
-  <title>Page Title</title>
+<html lang="en"></html>
+
+  <head>
+    <meta charset="UTF-8">
+    <title>Product Gallery</title>
+    <link rel="stylesheet" href="css/style.css">
+  </head>
   
   <body>
+    <div class = "header"> 
+      <img class = "logo" src = "assets/logo/logo-01.svg">
+      <hr>
+    </div>
+  
+    <nav>
+      <a href="./Cart.html">CART</a>
+    </nav>
 
     <h1>I am the solution to HW1!</h1>
 
