added navigations to cart and product on product page

--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -15,6 +15,7 @@
   
     <nav>
       <a href="./Cart.html">CART</a>
+      <a href="./index.html">PRODUCT</a>
     </nav>
 
     <h1>I am the solution to HW1!</h1>
