added product images

--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -10,13 +10,21 @@
   <body>
     <div class = "header"> 
       <img class = "logo" src = "assets/logo/logo-01.svg">
-      <hr>
+      <hr class = "line">
     </div>
   
-    <nav>
-      <a href="./Cart.html">CART</a>
+    <div class = "nav">
       <a href="./index.html">PRODUCT</a>
-    </nav>
+      <br>
+      <a href="./Cart.html">CART</a>
+    </div>
+
+    <p class = "list-title">Our hand-made cinnamon rolls</p>
+
+    <div class = "product-list">
+      <img class = "product-img" src = "assets/products/original-cinnamon-roll.jpg">
+
+    </div>
 
     <h1>I am the solution to HW1!</h1>
 
