tried to add product details and name

--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -23,6 +23,7 @@
 
     <div class = "product-list">
       <img class = "product-img" src = "assets/products/original-cinnamon-roll.jpg">
+      <a href="product-details/original.html" class = "product-name">Original cinnamon roll</a>
 
     </div>
 
