added boxed links to first product

--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -14,17 +14,23 @@
     </div>
   
     <div class = "nav">
-      <a href="./index.html">PRODUCT</a>
+      <a href="./index.html" id = "products-nav">PRODUCTS</a>
       <br>
-      <a href="./Cart.html">CART</a>
+      <br>
+      <a href="./Cart.html" id = "cart-nav">CART</a>
     </div>
 
     <p class = "list-title">Our hand-made cinnamon rolls</p>
 
     <div class = "product-list">
-      <img class = "product-img" src = "assets/products/original-cinnamon-roll.jpg">
+      <a href="product-details/original.html" class = "product-link">
+        <img class = "product-img" src = "assets/products/original-cinnamon-roll.jpg">
+        <p>Original cinnamon roll</p>
+        <p>$2.49</p>
+      </a>
+      <!--<img class = "product-img" src = "assets/products/original-cinnamon-roll.jpg">
       <a href="product-details/original.html" class = "product-name">Original cinnamon roll</a>
-
+      <p class = "price">$2.49</p> -->
     </div>
 
     <h1>I am the solution to HW1!</h1>
