added products to products page

--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -23,21 +23,54 @@
     <p class = "list-title">Our hand-made cinnamon rolls</p>
 
     <div class = "product-list">
-      <a href="product-details/original.html" class = "product-link">
-        <img class = "product-img" src = "assets/products/original-cinnamon-roll.jpg">
-        <p>Original cinnamon roll</p>
-        <p>$2.49</p>
-      </a>
-      <!--<img class = "product-img" src = "assets/products/original-cinnamon-roll.jpg">
-      <a href="product-details/original.html" class = "product-name">Original cinnamon roll</a>
-      <p class = "price">$2.49</p> -->
+      <div class = "original-roll">
+        <a href="product-details/original.html" class = "product-link">
+          <img class = "product-img" src = "assets/products/original-cinnamon-roll.jpg">
+          <p class = "product-name">Original cinnamon roll</p>
+          <p class = "product-price">$2.49</p>
+        </a>
+      </div>
+
+      <div class = "apple-roll">
+        <a href="product-details/apple.html" class = "product-link">
+          <img class = "product-img" src = "assets/products/apple-cinnamon-roll.jpg">
+          <p class = "product-name">Apple cinnamon roll</p>
+          <p class = "product-price">$3.49</p>
+        </a>
+      </div>
+
+      <div class = "raisin-roll">
+        <a href="product-details/raisin.html" class = "product-link">
+          <img class = "product-img" src = "assets/products/raisin-cinnamon-roll.jpg">
+          <p class = "product-name">Raisin cinnamon roll</p>
+          <p class = "product-price">$2.99</p>
+        </a>
+      </div>
+
+      <div class = "walnut-roll">
+        <a href="product-details/walnut.html" class = "product-link">
+          <img class = "product-img" src = "assets/products/walnut-cinnamon-roll.jpg">
+          <p class = "product-name">Walnut cinnamon roll</p>
+          <p class = "product-price">$3.49</p>
+        </a>
+      </div>
+
+      <div class = "double-choc-roll">
+        <a href="product-details/double-choc.html" class = "product-link">
+          <img class = "product-img" src = "assets/products/double-chocolate-cinnamon-roll.jpg">
+          <p class = "product-name">Double chocolate cinnamon roll</p>
+          <p class = "product-price">$3.99</p>
+        </a>
+      </div>
+      
+      <div class = "strawberry-roll">
+        <a href="product-details/strawberry.html" class = "product-link">
+          <img class = "product-img" src = "assets/products/strawberry-cinnamon-roll.jpg">
+          <p class = "product-name">Strawberry cinnamon roll</p>
+          <p class = "product-price">$3.99</p>
+        </a>
+      </div>
     </div>
-
-    <h1>I am the solution to HW1!</h1>
-
-    <p>
-        And I can link to <a href="./otherpage.html">other pages.</a>
-    </p>
 
   </body>
 </html>
