created  drop down menus

--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -9,7 +9,9 @@
   
   <body>
     <div class = "header"> 
-      <img class = "logo" src = "assets/logo/logo-01.svg">
+      <a href="./index.html">
+        <img class = "logo" src = "assets/logo/logo-01.svg">
+      </a>
       <hr class = "line">
     </div>
   
@@ -24,7 +26,7 @@
 
     <div class = "product-list">
       <div class = "original-roll">
-        <a href="product-details/original.html" class = "product-link">
+        <a href="./original.html" class = "product-link">
           <img class = "product-img" src = "assets/products/original-cinnamon-roll.jpg">
           <p class = "product-name">Original cinnamon roll</p>
           <p class = "product-price">$2.49</p>
@@ -32,7 +34,7 @@
       </div>
 
       <div class = "apple-roll">
-        <a href="product-details/apple.html" class = "product-link">
+        <a href="./original.html" class = "product-link">
           <img class = "product-img" src = "assets/products/apple-cinnamon-roll.jpg">
           <p class = "product-name">Apple cinnamon roll</p>
           <p class = "product-price">$3.49</p>
@@ -40,7 +42,7 @@
       </div>
 
       <div class = "raisin-roll">
-        <a href="product-details/raisin.html" class = "product-link">
+        <a href="./original.html" class = "product-link">
           <img class = "product-img" src = "assets/products/raisin-cinnamon-roll.jpg">
           <p class = "product-name">Raisin cinnamon roll</p>
           <p class = "product-price">$2.99</p>
@@ -48,7 +50,7 @@
       </div>
 
       <div class = "walnut-roll">
-        <a href="product-details/walnut.html" class = "product-link">
+        <a href="./original.html" class = "product-link">
           <img class = "product-img" src = "assets/products/walnut-cinnamon-roll.jpg">
           <p class = "product-name">Walnut cinnamon roll</p>
           <p class = "product-price">$3.49</p>
@@ -56,7 +58,7 @@
       </div>
 
       <div class = "double-choc-roll">
-        <a href="product-details/double-choc.html" class = "product-link">
+        <a href="./original.html" class = "product-link">
           <img class = "product-img" src = "assets/products/double-chocolate-cinnamon-roll.jpg">
           <p class = "product-name">Double chocolate cinnamon roll</p>
           <p class = "product-price">$3.99</p>
@@ -64,7 +66,7 @@
       </div>
       
       <div class = "strawberry-roll">
-        <a href="product-details/strawberry.html" class = "product-link">
+        <a href="./original.html" class = "product-link">
           <img class = "product-img" src = "assets/products/strawberry-cinnamon-roll.jpg">
           <p class = "product-name">Strawberry cinnamon roll</p>
           <p class = "product-price">$3.99</p>
