--- a/solution-hw1/Cart.html
+++ b/solution-hw1/Cart.html
@@ -1,15 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
-  <meta charset="UTF-8">
-  <title>Cart</title>
-  
+<html lang="en"></html>
+
+  <head>
+    <meta charset="UTF-8">
+    <title>Cart</title>
+    <link rel="stylesheet" href="css/style.css">
+  </head>
+
   <body>
+    <div class = "header"> 
+        <a href="./index.html">
+        <img class = "logo" src = "assets/logo/logo-01.svg">
+        </a>
+        <hr class = "line">
+    </div>
 
-    <h1>cart page</h1>
+    <div class = "nav">
+        <a href="./index.html" id = "products-nav">PRODUCTS</a>
+        <br>
+        <br>
+        <a href="./Cart.html" id = "cart-nav">CART</a>
+    </div>
 
-    <p>
-        Hello!
-    </p>
+    <p id = "cart-title">Shopping Cart</p>
+
+    <div id = "original-cart">
+        <img class = "cart-img" src = "assets/products/original-cinnamon-roll.jpg">
+        <p class = "remove">Remove</p>
+        <p class = "cart-details">Original Cinnamon Roll</p>
+        <p class = "cart-details">Glazing: Keep original</p>
+        <p class = "cart-details">Pack size: 1</p>
+        <p class = "cart-price">$2.49</p>
+    </div>
 
   </body>
 </html>
