--- a/solution-hw1/Cart.html
+++ b/solution-hw1/Cart.html
@@ -15,11 +15,11 @@
         <hr class = "line">
     </div>
 
-    <div class = "nav">
+    <div class = "in-cart-nav">
         <a href="./index.html" id = "products-nav">PRODUCTS</a>
         <br>
         <br>
-        <a href="./Cart.html" id = "cart-nav">CART</a>
+        <a href="./Cart.html" id = "yellow-cart-nav">CART</a>
     </div>
 
     <p id = "cart-title">Shopping Cart</p>
