--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -15,8 +15,8 @@
       <hr class = "line">
     </div>
   
-    <div class = "nav">
-      <a href="./index.html" id = "products-nav">PRODUCTS</a>
+    <div class = "in-products-nav">
+      <a href="./index.html" id = "yellow-products-nav">PRODUCTS</a>
       <br>
       <br>
       <a href="./Cart.html" id = "cart-nav">CART</a>
