made nav bar more efficient with two classes

--- a/solution-hw1/Cart.html
+++ b/solution-hw1/Cart.html
@@ -15,12 +15,21 @@
         <hr class = "line">
     </div>
 
+    <nav>
+        <a href="./index.html" class = "products-nav">PRODUCTS</a>
+        <br>
+        <br>
+        <a href="./Cart.html" class = "cart-nav on-page">CART</a>
+      </nav>
+
+    <!--
     <div class = "in-cart-nav">
         <a href="./index.html" id = "products-nav">PRODUCTS</a>
         <br>
         <br>
         <a href="./Cart.html" id = "yellow-cart-nav">CART</a>
     </div>
+    -->
 
     <p id = "cart-title">Shopping Cart</p>
 
@@ -31,6 +40,15 @@
         <p class = "cart-details">Glazing: Keep original</p>
         <p class = "cart-details">Pack size: 1</p>
         <p class = "cart-price">$2.49</p>
+    </div>
+
+    <div id = "double-choc-cart">
+        <img class = "cart-img" src = "assets/products/double-chocolate-cinnamon-roll.jpg">
+        <p class = "remove">Remove</p>
+        <p class = "cart-details">Double Chocolate Cinnamon Rolls</p>
+        <p class = "cart-details">Glazing: Sugar milk</p>
+        <p class = "cart-details">Pack size: 6</p>
+        <p class = "cart-price">$27.45</p>
     </div>
 
   </body>
