--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -14,15 +14,25 @@
       </a>
       <hr class = "line">
     </div>
+
+    <nav>
+      <a href="./index.html" class = "products-nav on-page">PRODUCTS</a>
+      <br>
+      <br>
+      <a href="./Cart.html" class = "cart-nav">CART</a>
+    </nav>
   
+
+    <!--
     <div class = "in-products-nav">
       <a href="./index.html" id = "yellow-products-nav">PRODUCTS</a>
       <br>
       <br>
       <a href="./Cart.html" id = "cart-nav">CART</a>
     </div>
+    -->
 
-    <p class = "list-title">Our hand-made cinnamon rolls</p>
+    <h1 class = "list-title">Our hand-made cinnamon rolls</h1>
 
     <div class = "product-list">
       <div class = "original-roll">
