--- a/solution-hw1/original.html
+++ b/solution-hw1/original.html
@@ -14,13 +14,22 @@
       </a>
       <hr class = "line">
     </div>
+
+    <nav>
+      <a href="./index.html" class = "products-nav on-page">PRODUCTS</a>
+      <br>
+      <br>
+      <a href="./Cart.html" class = "cart-nav">CART</a>
+    </nav>
   
+    <!--
     <div class = "in-products-nav">
       <a href="./index.html" id = "yellow-products-nav">PRODUCTS</a>
       <br>
       <br>
       <a href="./Cart.html" id = "cart-nav">CART</a>
     </div>
+    -->
 
   <p id = "detail-title">Original Cinnamon Roll</p>
 
