changed product details section

--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -12,7 +12,7 @@
       <a href="./index.html">
         <img class = "logo" src = "assets/logo/logo-01.svg">
       </a>
-      <hr class = "line">
+      <hr id = "logo-line">
     </div>
 
     <nav>
@@ -21,18 +21,8 @@
       <br>
       <a href="./Cart.html" class = "cart-nav">CART</a>
     </nav>
-  
 
-    <!--
-    <div class = "in-products-nav">
-      <a href="./index.html" id = "yellow-products-nav">PRODUCTS</a>
-      <br>
-      <br>
-      <a href="./Cart.html" id = "cart-nav">CART</a>
-    </div>
-    -->
-
-    <h1 class = "list-title">Our hand-made cinnamon rolls</h1>
+    <h1 id = "list-title">Our hand-made cinnamon rolls</h1>
 
     <div class = "product-list">
       <div class = "original-roll">
