--- a/solution-hw1/Cart.html
+++ b/solution-hw1/Cart.html
@@ -12,7 +12,7 @@
         <a href="./index.html">
         <img class = "logo" src = "assets/logo/logo-01.svg">
         </a>
-        <hr class = "line">
+        <hr id = "logo-line">
     </div>
 
     <nav>
@@ -22,16 +22,7 @@
         <a href="./Cart.html" class = "cart-nav on-page">CART</a>
       </nav>
 
-    <!--
-    <div class = "in-cart-nav">
-        <a href="./index.html" id = "products-nav">PRODUCTS</a>
-        <br>
-        <br>
-        <a href="./Cart.html" id = "yellow-cart-nav">CART</a>
-    </div>
-    -->
-
-    <p id = "cart-title">Shopping Cart</p>
+    <h1 id = "cart-title">Shopping Cart</h1>
 
     <div id = "original-cart">
         <img class = "cart-img" src = "assets/products/original-cinnamon-roll.jpg">
@@ -50,6 +41,14 @@
         <p class = "cart-details">Pack size: 6</p>
         <p class = "cart-price">$27.45</p>
     </div>
+
+    <hr id = "cart-bottom"> 
+
+    <p id = "total-price">Total: $29.94</p>
+
+    <button id = "checkout-btn">
+      Checkout
+    </button>
 
   </body>
 </html>
