--- a/solution-hw1/original.html
+++ b/solution-hw1/original.html
@@ -12,7 +12,7 @@
       <a href="./index.html">
         <img class = "logo" src = "assets/logo/logo-01.svg">
       </a>
-      <hr class = "line">
+      <hr id = "logo-line">
     </div>
 
     <nav>
@@ -21,42 +21,43 @@
       <br>
       <a href="./Cart.html" class = "cart-nav">CART</a>
     </nav>
-  
-    <!--
-    <div class = "in-products-nav">
-      <a href="./index.html" id = "yellow-products-nav">PRODUCTS</a>
-      <br>
-      <br>
-      <a href="./Cart.html" id = "cart-nav">CART</a>
-    </div>
-    -->
 
-  <p id = "detail-title">Original Cinnamon Roll</p>
+  <h1 id = "detail-title">Original Cinnamon Roll</h1>
 
   <img id = "detail-img" src = "assets/products/original-cinnamon-roll.jpg">
 
-  <p class = "detail-desc">Customize our delicious, hand-made cinnamon roll to your liking!</p>
+  <div class = "detail-box">
 
-  <div class = "glaze-menu">
-    <label for = "glazing">Glazing:</label>
-    <br>
-    <select name = "glazing" id = "glazing">
-      <option value = "keep-original">Keep original</option>
-      <option value = "sugar-milk">Sugar milk</option>
-      <option value = "vanilla-milk">Vanilla milk</option>
-      <option value = "double-chocolate">Double chocolate</option>
-    </select>
-  </div>
+    <p class = "roll-desc">Customize our delicious, hand-made cinnamon roll to your liking!</p>
 
-  <div class = "pack-menu">
-    <label for = "pack-size">Pack size:</label>
-    <br>
-    <select name = "pack-size" id = "pack-size">
-      <option value = "1">1</option>
-      <option value = "3">3</option>
-      <option value = "6">6</option>
-      <option value = "12">12</option>
-    </select>
+    <div class = "glaze-menu">
+      <label for = "glazing" class = "menu-label">Glazing:</label>
+      <br>
+      <select name = "glazing" id = "glazing">
+        <option value = "keep-original">Keep original</option>
+        <option value = "sugar-milk">Sugar milk</option>
+        <option value = "vanilla-milk">Vanilla milk</option>
+        <option value = "double-chocolate">Double chocolate</option>
+      </select>
+    </div>
+
+    <div class = "pack-menu">
+      <label for = "pack-size" class = "menu-label">Pack size:</label>
+      <br>
+      <select name = "pack-size" id = "pack-size">
+        <option value = "1">1</option>
+        <option value = "3">3</option>
+        <option value = "6">6</option>
+        <option value = "12">12</option>
+      </select>
+    </div>
+
+    <p class = "roll-price">$2.49</p>
+
+    <button id = "add-cart-btn">
+      Add to cart
+    </button>
+
   </div>
 
 
