--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en"></html>
+<html lang="en">
 
   <head>
-    <meta charset="UTF-8">
-    <title>Product Gallery</title>
-    <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8"> 
+    <title>Product Gallery</title> 
+    <link rel="stylesheet" href="css/style.css"> 
   </head>
   
   <body>
