added alt text to images in product gallery

--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -10,7 +10,8 @@
   <body>
     <div class = "header"> 
       <a href="./index.html">
-        <img class = "logo" src = "assets/logo/logo-01.svg">
+        <img class = "logo" src = "assets/logo/logo-01.svg" 
+        alt = "image of BunBun Bake Shop logo">
       </a>
       <hr id = "logo-line">
     </div>
@@ -27,7 +28,8 @@
     <div class = "product-list">
       <div class = "original-roll">
         <a href="./original.html" class = "product-link">
-          <img class = "product-img" src = "assets/products/original-cinnamon-roll.jpg">
+          <img class = "product-img" src = "assets/products/original-cinnamon-roll.jpg"
+          alt = "image of Original cinnamon roll">
           <p class = "product-name">Original cinnamon roll</p>
           <p class = "product-price">$2.49</p>
         </a>
@@ -35,7 +37,8 @@
 
       <div class = "apple-roll">
         <a href="./original.html" class = "product-link">
-          <img class = "product-img" src = "assets/products/apple-cinnamon-roll.jpg">
+          <img class = "product-img" src = "assets/products/apple-cinnamon-roll.jpg"
+          alt = "image of Apple cinnamon roll">
           <p class = "product-name">Apple cinnamon roll</p>
           <p class = "product-price">$3.49</p>
         </a>
@@ -43,7 +46,8 @@
 
       <div class = "raisin-roll">
         <a href="./original.html" class = "product-link">
-          <img class = "product-img" src = "assets/products/raisin-cinnamon-roll.jpg">
+          <img class = "product-img" src = "assets/products/raisin-cinnamon-roll.jpg"
+          alt = "image of Raisin cinnamon roll">
           <p class = "product-name">Raisin cinnamon roll</p>
           <p class = "product-price">$2.99</p>
         </a>
@@ -51,7 +55,8 @@
 
       <div class = "walnut-roll">
         <a href="./original.html" class = "product-link">
-          <img class = "product-img" src = "assets/products/walnut-cinnamon-roll.jpg">
+          <img class = "product-img" src = "assets/products/walnut-cinnamon-roll.jpg"
+          alt = "image of Walnut cinnamon roll">
           <p class = "product-name">Walnut cinnamon roll</p>
           <p class = "product-price">$3.49</p>
         </a>
@@ -59,7 +64,8 @@
 
       <div class = "double-choc-roll">
         <a href="./original.html" class = "product-link">
-          <img class = "product-img" src = "assets/products/double-chocolate-cinnamon-roll.jpg">
+          <img class = "product-img" src = "assets/products/double-chocolate-cinnamon-roll.jpg"
+          alt = "image of Double chocolate cinnamon roll">
           <p class = "product-name">Double chocolate cinnamon roll</p>
           <p class = "product-price">$3.99</p>
         </a>
@@ -67,7 +73,8 @@
       
       <div class = "strawberry-roll">
         <a href="./original.html" class = "product-link">
-          <img class = "product-img" src = "assets/products/strawberry-cinnamon-roll.jpg">
+          <img class = "product-img" src = "assets/products/strawberry-cinnamon-roll.jpg"
+          alt = "image of Strawberry cinnamon roll">
           <p class = "product-name">Strawberry cinnamon roll</p>
           <p class = "product-price">$3.99</p>
         </a>
