added alt to images in detail and cart page

--- a/solution-hw1/Cart.html
+++ b/solution-hw1/Cart.html
@@ -10,7 +10,8 @@
   <body>
     <div class = "header"> 
         <a href="./index.html">
-        <img class = "logo" src = "assets/logo/logo-01.svg">
+        <img class = "logo" src = "assets/logo/logo-01.svg"
+        alt = "image of BunBun Bake Shop logo">
         </a>
         <hr id = "logo-line">
     </div>
@@ -25,7 +26,8 @@
     <h1 id = "cart-title">Shopping Cart</h1>
 
     <div id = "original-cart">
-        <img class = "cart-img" src = "assets/products/original-cinnamon-roll.jpg">
+        <img class = "cart-img" src = "assets/products/original-cinnamon-roll.jpg"
+        alt = "image of Original cinnamon roll">
         <p class = "remove">Remove</p>
         <p class = "cart-details">Original Cinnamon Roll</p>
         <p class = "cart-details">Glazing: Keep original</p>
@@ -34,7 +36,8 @@
     </div>
 
     <div id = "double-choc-cart">
-        <img class = "cart-img" src = "assets/products/double-chocolate-cinnamon-roll.jpg">
+        <img class = "cart-img" src = "assets/products/double-chocolate-cinnamon-roll.jpg"
+        alt = "image of Double chocolate cinnamon roll">
         <p class = "remove">Remove</p>
         <p class = "cart-details">Double Chocolate Cinnamon Rolls</p>
         <p class = "cart-details">Glazing: Sugar milk</p>
