--- a/solution-hw1/original.html
+++ b/solution-hw1/original.html
@@ -10,7 +10,8 @@
   <body>
     <div class = "header"> 
       <a href="./index.html">
-        <img class = "logo" src = "assets/logo/logo-01.svg">
+        <img class = "logo" src = "assets/logo/logo-01.svg"
+        alt = "image of BunBun Bake Shop logo">
       </a>
       <hr id = "logo-line">
     </div>
@@ -24,7 +25,8 @@
 
   <h1 id = "detail-title">Original Cinnamon Roll</h1>
 
-  <img id = "detail-img" src = "assets/products/original-cinnamon-roll.jpg">
+  <img id = "detail-img" src = "assets/products/original-cinnamon-roll.jpg"
+  alt = "image of Original cinnamon roll">
 
   <div class = "detail-box">
 
