--- a/solution-hw1/original.html
+++ b/solution-hw1/original.html
@@ -8,13 +8,13 @@
   </head> 
   
   <body>
-    <div class = "header"> 
+    <header>
       <a href="./index.html">
         <img class = "logo" src = "assets/logo/logo-01.svg"
         alt = "image of BunBun Bake Shop logo">
       </a>
       <hr id = "logo-line">
-    </div>
+    </header>
 
     <nav>
       <a href="./index.html" class = "products-nav on-page">PRODUCTS</a>
@@ -23,47 +23,46 @@
       <a href="./Cart.html" class = "cart-nav">CART</a>
     </nav>
 
-  <h1 id = "detail-title">Original Cinnamon Roll</h1>
+    <main>
+      <h1 id = "detail-title">Original Cinnamon Roll</h1>
 
-  <img id = "detail-img" src = "assets/products/original-cinnamon-roll.jpg"
-  alt = "image of Original cinnamon roll">
+      <img id = "detail-img" src = "assets/products/original-cinnamon-roll.jpg"
+      alt = "image of Original cinnamon roll">
 
-  <div class = "detail-box">
+      <div class = "detail-box">
+        <!--width for rest of content is applied here-->
 
-    <p class = "roll-desc">Customize our delicious, hand-made cinnamon roll to your liking!</p>
+        <p class = "roll-desc">Customize our delicious, hand-made cinnamon roll to your liking!</p>
 
-    <div class = "glaze-menu">
-      <label for = "glazing" class = "menu-label">Glazing:</label>
-      <br>
-      <select name = "glazing" id = "glazing">
-        <option value = "keep-original">Keep original</option>
-        <option value = "sugar-milk">Sugar milk</option>
-        <option value = "vanilla-milk">Vanilla milk</option>
-        <option value = "double-chocolate">Double chocolate</option>
-      </select>
-    </div>
+        <div class = "glaze-menu">
+          <label for = "glazing" class = "menu-label">Glazing:</label>
+          <br>
+          <select name = "glazing" id = "glazing">
+            <option value = "keep-original">Keep original</option>
+            <option value = "sugar-milk">Sugar milk</option>
+            <option value = "vanilla-milk">Vanilla milk</option>
+            <option value = "double-chocolate">Double chocolate</option>
+          </select>
+        </div>
 
-    <div class = "pack-menu">
-      <label for = "pack-size" class = "menu-label">Pack size:</label>
-      <br>
-      <select name = "pack-size" id = "pack-size">
-        <option value = "1">1</option>
-        <option value = "3">3</option>
-        <option value = "6">6</option>
-        <option value = "12">12</option>
-      </select>
-    </div>
+        <div class = "pack-menu">
+          <label for = "pack-size" class = "menu-label">Pack size:</label>
+          <br>
+          <select name = "pack-size" id = "pack-size">
+            <option value = "1">1</option>
+            <option value = "3">3</option>
+            <option value = "6">6</option>
+            <option value = "12">12</option>
+          </select>
+        </div>
 
-    <p class = "roll-price">$2.49</p>
+        <p class = "roll-price">$2.49</p>
 
-    <button id = "add-cart-btn">
-      Add to cart
-    </button>
-
-  </div>
-
-
-  
+        <button id = "add-cart-btn">
+          Add to cart
+        </button>
+      </div>
+    </main>
 
   </body>
 </html>
