--- a/solution-hw2/index.html
+++ b/solution-hw2/index.html
@@ -9,25 +9,26 @@
   
   <body>
     <header>
-      <a href="./index.html">
-        <img class = "logo" src = "assets/logo/logo-01.svg" 
-        alt = "image of BunBun Bake Shop logo">
-      </a>
-      <hr id = "logo-line">
+      <div class = "header-left">
+        <a href="./index.html">
+          <img class = "logo" src = "assets/logo/logo-01.svg" 
+          alt = "image of BunBun Bake Shop logo">
+        </a>
+      </div>
+      <div class = "header-right">
+        <nav>
+          <a href="./index.html" class = "products-nav on-page">PRODUCTS</a>
+          <a href="./Cart.html" class = "cart-nav">CART</a>
+        </nav>
+        <hr id = "logo-line">
+        <h1 id = "list-title">Our hand-made cinnamon rolls</h1>
+      </div>
     </header>
 
-    <nav>
-      <a href="./index.html" class = "products-nav on-page">PRODUCTS</a>
-      <br>
-      <br>
-      <a href="./Cart.html" class = "cart-nav">CART</a>
-    </nav>
 
     <!--products highlighted on nav bar-->
 
     <main>
-
-      <h1 id = "list-title">Our hand-made cinnamon rolls</h1>
 
       <div class = "product-list">
         <div class = "original-roll">
