--- a/solution-hw2/index.html
+++ b/solution-hw2/index.html
@@ -19,6 +19,7 @@
         <nav>
           <a href="./index.html" class = "products-nav on-page">PRODUCTS</a>
           <a href="./Cart.html" class = "cart-nav">CART</a>
+          <span class = "cart-badge">2</span>
         </nav>
         <hr id = "logo-line">
         <h1 id = "list-title">Our hand-made cinnamon rolls</h1>
@@ -33,55 +34,67 @@
       <div class = "product-list">
         <div class = "original-roll">
           <a href="./original.html" class = "product-link">
-            <img class = "product-img" src = "assets/products/original-cinnamon-roll.jpg"
-            alt = "image of Original cinnamon roll">
-            <p class = "product-name">Original cinnamon roll</p>
-            <p class = "product-price">$2.49</p>
+            <div class = "link-content">
+              <img class = "product-img" src = "assets/products/original-cinnamon-roll.jpg"
+              alt = "image of Original cinnamon roll">
+              <p class = "product-name">Original cinnamon roll</p>
+              <p class = "product-price">$2.49</p>
+            </div>
           </a>
         </div>
 
         <div class = "apple-roll">
           <a href="./original.html" class = "product-link">
-            <img class = "product-img" src = "assets/products/apple-cinnamon-roll.jpg"
-            alt = "image of Apple cinnamon roll">
-            <p class = "product-name">Apple cinnamon roll</p>
-            <p class = "product-price">$3.49</p>
+            <div class = "link-content">
+              <img class = "product-img" src = "assets/products/apple-cinnamon-roll.jpg"
+              alt = "image of Apple cinnamon roll">
+              <p class = "product-name">Apple cinnamon roll</p>
+              <p class = "product-price">$3.49</p>
+            </div>
           </a>
         </div>
 
         <div class = "raisin-roll">
           <a href="./original.html" class = "product-link">
-            <img class = "product-img" src = "assets/products/raisin-cinnamon-roll.jpg"
-            alt = "image of Raisin cinnamon roll">
-            <p class = "product-name">Raisin cinnamon roll</p>
-            <p class = "product-price">$2.99</p>
+            <div class = "link-content">
+              <img class = "product-img" src = "assets/products/raisin-cinnamon-roll.jpg"
+              alt = "image of Raisin cinnamon roll">
+              <p class = "product-name">Raisin cinnamon roll</p>
+              <p class = "product-price">$2.99</p>
+            </div>
           </a>
         </div>
 
         <div class = "walnut-roll">
           <a href="./original.html" class = "product-link">
-            <img class = "product-img" src = "assets/products/walnut-cinnamon-roll.jpg"
-            alt = "image of Walnut cinnamon roll">
-            <p class = "product-name">Walnut cinnamon roll</p>
-            <p class = "product-price">$3.49</p>
+            <div class = "link-content">
+              <img class = "product-img" src = "assets/products/walnut-cinnamon-roll.jpg"
+              alt = "image of Walnut cinnamon roll">
+              <p class = "product-name">Walnut cinnamon roll</p>
+              <p class = "product-price">$3.49</p>
+            </div>
           </a>
         </div>
 
         <div class = "double-choc-roll">
           <a href="./original.html" class = "product-link">
-            <img class = "product-img" src = "assets/products/double-chocolate-cinnamon-roll.jpg"
-            alt = "image of Double chocolate cinnamon roll">
-            <p class = "product-name">Double chocolate cinnamon roll</p>
-            <p class = "product-price">$3.99</p>
+            <div class = "link-content">
+              <img class = "product-img" src = "assets/products/double-chocolate-cinnamon-roll.jpg"
+              alt = "image of Double chocolate cinnamon roll">
+              <p class = "product-name">Double chocolate cinnamon roll</p>
+              <p class = "product-price">$3.99</p>
+            </div>
           </a>
         </div>
         
         <div class = "strawberry-roll">
           <a href="./original.html" class = "product-link">
-            <img class = "product-img" src = "assets/products/strawberry-cinnamon-roll.jpg"
-            alt = "image of Strawberry cinnamon roll">
-            <p class = "product-name">Strawberry cinnamon roll</p>
-            <p class = "product-price">$3.99</p>
+            <div class = "link-content">
+              <img class = "product-img" src = "assets/products/strawberry-cinnamon-roll.jpg"
+              alt = "image of Strawberry cinnamon roll">
+              <p class = "product-name">Strawberry cinnamon roll</p>
+              <p class = "product-price">$3.99</p>
+            </div>
           </a>
         </div>
       </div>
