--- a/solution-hw2/original.html
+++ b/solution-hw2/original.html
@@ -9,11 +9,21 @@
   
   <body>
     <header>
-      <a href="./index.html">
-        <img class = "logo" src = "assets/logo/logo-01.svg"
-        alt = "image of BunBun Bake Shop logo">
-      </a>
-      <hr id = "logo-line">
+      <div class = "header-left">
+        <a href="./index.html">
+          <img class = "logo" src = "assets/logo/logo-01.svg" 
+          alt = "image of BunBun Bake Shop logo">
+        </a>
+      </div>
+      <div class = "header-right">
+        <nav>
+          <a href="./index.html" class = "products-nav on-page">PRODUCTS</a>
+          <a href="./Cart.html" class = "cart-nav">CART</a>
+          <span class = "cart-badge">2</span>
+        </nav>
+        <hr id = "logo-line">
+        <h1 id = "list-title">Our hand-made cinnamon rolls</h1>
+      </div>
     </header>
 
     <nav>
