--- a/solution-hw2/original.html
+++ b/solution-hw2/original.html
@@ -26,51 +26,46 @@
       </div>
     </header>
 
-    <nav>
-      <a href="./index.html" class = "products-nav on-page">PRODUCTS</a>
-      <br>
-      <br>
-      <a href="./Cart.html" class = "cart-nav">CART</a>
-    </nav>
-
-    <main>
-      <h1 id = "detail-title">Original Cinnamon Roll</h1>
-
-      <img id = "detail-img" src = "assets/products/original-cinnamon-roll.jpg"
+    <main class = "product-detail-container">
+    <!-- main container for all product detail information-->
+      <img class = "detail-img" src = "assets/products/original-cinnamon-roll.jpg"
       alt = "image of Original cinnamon roll">
 
-      <div class = "detail-box">
-        <!--width for rest of content is applied here-->
+      <div class = "detail-container">
+        <!--all of the text next to the img is here-->
 
         <p class = "roll-desc">Customize our delicious, hand-made cinnamon roll to your liking!</p>
+        
+        <div class = "roll-options">
+        <!-- both dropdown menus are inside this -->
+          <div class = "glaze-menu">
+            <label for = "glazing" class = "menu-label">Glazing:</label>
+            <br>
+            <select name = "glazing" id = "glazing">
+              <option value = "keep-original">Keep original</option>
+              <option value = "sugar-milk">Sugar milk</option>
+              <option value = "vanilla-milk">Vanilla milk</option>
+              <option value = "double-chocolate">Double chocolate</option>
+            </select>
+          </div>
 
-        <div class = "glaze-menu">
-          <label for = "glazing" class = "menu-label">Glazing:</label>
-          <br>
-          <select name = "glazing" id = "glazing">
-            <option value = "keep-original">Keep original</option>
-            <option value = "sugar-milk">Sugar milk</option>
-            <option value = "vanilla-milk">Vanilla milk</option>
-            <option value = "double-chocolate">Double chocolate</option>
-          </select>
+          <div class = "pack-menu">
+            <label for = "pack-size" class = "menu-label">Pack size:</label>
+            <select name = "pack-size" id = "pack-size">
+              <option value = "1">1</option>
+              <option value = "3">3</option>
+              <option value = "6">6</option>
+              <option value = "12">12</option>
+            </select>
+          </div>
         </div>
 
-        <div class = "pack-menu">
-          <label for = "pack-size" class = "menu-label">Pack size:</label>
-          <br>
-          <select name = "pack-size" id = "pack-size">
-            <option value = "1">1</option>
-            <option value = "3">3</option>
-            <option value = "6">6</option>
-            <option value = "12">12</option>
-          </select>
+        <div class = "price-to-cart">
+          <p class = "roll-price">$2.49</p>
+          <button id = "add-cart-btn">
+            Add to cart
+          </button>
         </div>
-
-        <p class = "roll-price">$2.49</p>
-
-        <button id = "add-cart-btn">
-          Add to cart
-        </button>
       </div>
     </main>
 
