made product name bold when hover

--- a/solution-hw2/index.html
+++ b/solution-hw2/index.html
@@ -26,15 +26,14 @@
       </div>
     </header>
 
-
-    <!--products highlighted on nav bar-->
-
     <main>
-
       <div class = "product-list">
+      <!-- main container for all products below -->
         <div class = "original-roll">
           <a href="./original.html" class = "product-link">
+          <!-- formats outer highlight and link -->
             <div class = "link-content">
+            <!-- contains image and caption -->
               <img class = "product-img" src = "assets/products/original-cinnamon-roll.jpg"
               alt = "image of Original cinnamon roll">
               <p class = "product-name">Original cinnamon roll</p>
