--- a/solution-hw2/index.html
+++ b/solution-hw2/index.html
@@ -10,19 +10,21 @@
   <body>
     <header>
       <div class = "header-left">
+      <!-- contains just logo img -->
         <a href="./index.html">
           <img class = "logo" src = "assets/logo/logo-01.svg" 
-          alt = "image of BunBun Bake Shop logo">
+          alt = "BunBun Bake Shop logo">
         </a>
       </div>
       <div class = "header-right">
+      <!-- contains nav, line, and title -->
         <nav>
           <a href="./index.html" class = "products-nav on-page">PRODUCTS</a>
           <a href="./Cart.html" class = "cart-nav">CART</a>
           <span class = "cart-badge">2</span>
         </nav>
         <hr id = "logo-line">
-        <h1 id = "list-title">Our hand-made cinnamon rolls</h1>
+        <h1 class = "header-title">Our hand-made cinnamon rolls</h1>
       </div>
     </header>
 
@@ -35,7 +37,7 @@
             <div class = "link-content">
             <!-- contains image and caption -->
               <img class = "product-img" src = "assets/products/original-cinnamon-roll.jpg"
-              alt = "image of Original cinnamon roll">
+              alt = "Original cinnamon roll">
               <p class = "product-name">Original cinnamon roll</p>
               <p class = "product-price">$2.49</p>
             </div>
@@ -46,7 +48,7 @@
           <a href="./original.html" class = "product-link">
             <div class = "link-content">
               <img class = "product-img" src = "assets/products/apple-cinnamon-roll.jpg"
-              alt = "image of Apple cinnamon roll">
+              alt = "Apple cinnamon roll">
               <p class = "product-name">Apple cinnamon roll</p>
               <p class = "product-price">$3.49</p>
             </div>
@@ -57,7 +59,7 @@
           <a href="./original.html" class = "product-link">
             <div class = "link-content">
               <img class = "product-img" src = "assets/products/raisin-cinnamon-roll.jpg"
-              alt = "image of Raisin cinnamon roll">
+              alt = "Raisin cinnamon roll">
               <p class = "product-name">Raisin cinnamon roll</p>
               <p class = "product-price">$2.99</p>
             </div>
@@ -68,7 +70,7 @@
           <a href="./original.html" class = "product-link">
             <div class = "link-content">
               <img class = "product-img" src = "assets/products/walnut-cinnamon-roll.jpg"
-              alt = "image of Walnut cinnamon roll">
+              alt = "Walnut cinnamon roll">
               <p class = "product-name">Walnut cinnamon roll</p>
               <p class = "product-price">$3.49</p>
             </div>
@@ -79,7 +81,7 @@
           <a href="./original.html" class = "product-link">
             <div class = "link-content">
               <img class = "product-img" src = "assets/products/double-chocolate-cinnamon-roll.jpg"
-              alt = "image of Double chocolate cinnamon roll">
+              alt = "Double chocolate cinnamon roll">
               <p class = "product-name">Double chocolate cinnamon roll</p>
               <p class = "product-price">$3.99</p>
             </div>
@@ -90,7 +92,7 @@
           <a href="./original.html" class = "product-link">
             <div class = "link-content">
               <img class = "product-img" src = "assets/products/strawberry-cinnamon-roll.jpg"
-              alt = "image of Strawberry cinnamon roll">
+              alt = "Strawberry cinnamon roll">
               <p class = "product-name">Strawberry cinnamon roll</p>
               <p class = "product-price">$3.99</p>
             </div>
