additional formatting to cart page

--- a/solution-hw2/Cart.html
+++ b/solution-hw2/Cart.html
@@ -22,7 +22,7 @@
           <span class = "cart-badge">2</span>
         </nav>
         <hr id = "logo-line">
-        <h1 id = "list-title">Our hand-made cinnamon rolls</h1>
+        <h1 class = "header-title">Shopping cart</h1>
       </div>
     </header>
 
@@ -50,7 +50,7 @@
       <div class = "cart-item">
         <div class = "cart-item-info">
           <img class = "cart-item-img" src = "assets/products/double-chocolate-cinnamon-roll.jpg"
-          alt = "image of Double chocolate cinnamon roll">
+          alt = "Double chocolate cinnamon roll">
           <div class = "cart-item-details">
             <p>Double Chocolate Cinnamon Rolls</p>
             <p>Glazing: Sugar milk</p>
