additional formatting to product detail: ready to push

--- a/solution-hw2/original.html
+++ b/solution-hw2/original.html
@@ -22,16 +22,16 @@
           <span class = "cart-badge">2</span>
         </nav>
         <hr id = "logo-line">
-        <h1 id = "list-title">Our hand-made cinnamon rolls</h1>
+        <h1 class = "header-title">Original cinnamon roll</h1>
       </div>
     </header>
 
     <main class = "product-detail-container">
     <!-- main container for all product detail information-->
       <img class = "detail-img" src = "assets/products/original-cinnamon-roll.jpg"
-      alt = "image of Original cinnamon roll">
+      alt = "Original cinnamon roll">
 
-      <div class = "detail-container">
+      <div class = "detail-text-container">
         <!--all of the text next to the img is here-->
 
         <p class = "roll-desc">Customize our delicious, hand-made cinnamon roll to your liking!</p>
@@ -63,7 +63,7 @@
         <div class = "price-to-cart">
           <p class = "roll-price">$2.49</p>
           <button id = "add-cart-btn">
-            Add to cart
+            Add to Cart
           </button>
         </div>
       </div>
