--- a/solution-hw2/original.html
+++ b/solution-hw2/original.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Product Detail</title>
     <link rel="stylesheet" href="css/style.css">
-    <script defer src="hw3.js"></script>
+    <script defer src="./hw3.js"></script>
   </head> 
   
   <body>
@@ -43,10 +43,10 @@
             <label for = "glazing" class = "menu-label">Glazing:</label>
             <br>
             <select name = "glazing" id = "glazing">
-              <option value = "keep-original">Keep original</option>
-              <option value = "sugar-milk">Sugar milk</option>
-              <option value = "vanilla-milk">Vanilla milk</option>
-              <option value = "double-chocolate">Double chocolate</option>
+              <option value = "0">Keep original</option>
+              <option value = "0">Sugar milk</option>
+              <option value = "0.5">Vanilla milk</option>
+              <option value = "1.5">Double chocolate</option>
             </select>
           </div>
 
@@ -55,8 +55,8 @@
             <select name = "pack-size" id = "pack-size">
               <option value = "1">1</option>
               <option value = "3">3</option>
-              <option value = "6">6</option>
-              <option value = "12">12</option>
+              <option value = "5">6</option>
+              <option value = "10">12</option>
             </select>
           </div>
         </div>
