--- a/solution-hw3/original.html
+++ b/solution-hw3/original.html
@@ -43,20 +43,20 @@
             <label for = "glazing" class = "menu-label">Glazing:</label>
             <br>
             <select name = "glazing" id = "glazing">
-              <option value = "0">Keep original</option>
+              <!-- <option value = "0">Keep original</option>
               <option value = "0">Sugar milk</option>
               <option value = "0.5">Vanilla milk</option>
-              <option value = "1.5">Double chocolate</option>
+              <option value = "1.5">Double chocolate</option> -->
             </select>
           </div>
 
           <div class = "pack-menu">
             <label for = "pack-size" class = "menu-label">Pack size:</label>
             <select name = "pack-size" id = "pack-size">
-              <option value = "1">1</option>
+              <!-- <option value = "1">1</option>
               <option value = "3">3</option>
               <option value = "5">6</option>
-              <option value = "10">12</option>
+              <option value = "10">12</option> --> 
             </select>
           </div>
         </div>
