changed roll price in html to be empty

--- a/solution-hw3/original.html
+++ b/solution-hw3/original.html
@@ -62,7 +62,7 @@
         </div>
 
         <div class = "price-to-cart">
-          <p class = "roll-price">$2.49</p>
+          <p class = "roll-price"></p>
           <button id = "add-cart-btn">
             Add to Cart
           </button>
