--- a/solution-hw3/original.html
+++ b/solution-hw3/original.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Product Detail</title>
     <link rel="stylesheet" href="css/style.css">
-    <script defer src="./hw3.js"></script>
+    <script defer src="js/hw3.js"></script>
   </head> 
   
   <body>
