tried to add json file to html

--- a/solution-hw4/detail.html
+++ b/solution-hw4/detail.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <title>Product Detail</title>
     <link rel="stylesheet" href="css/style.css">
-    <script defer src="js/hw3.js"></script>
+    <script defer src="js/detail.js"></script>
+    <script defer src="js/rollsData.js"></script> 
   </head> 
   
   <body>
@@ -23,7 +24,7 @@
           <span class = "cart-badge">2</span>
         </nav>
         <hr id = "logo-line">
-        <h1 class = "header-title">Original cinnamon roll</h1>
+        <h1 class = "header-title"></h1>
       </div>
     </header>
 
