--- a/solution-hw4/index.html
+++ b/solution-hw4/index.html
@@ -32,7 +32,7 @@
       <div class = "product-list">
       <!-- main container for all products below -->
         <div class = "original-roll">
-          <a href="./original.html" class = "product-link">
+          <a href="./detail.html?roll=Original" class = "product-link">
           <!-- formats outer highlight and link -->
             <div class = "link-content">
             <!-- contains image and caption -->
@@ -45,7 +45,7 @@
         </div>
 
         <div class = "apple-roll">
-          <a href="./original.html" class = "product-link">
+          <a href="./detail.html?roll=Apple" class = "product-link">
             <div class = "link-content">
               <img class = "product-img" src = "assets/products/apple-cinnamon-roll.jpg"
               alt = "Apple cinnamon roll">
@@ -56,7 +56,7 @@
         </div>
 
         <div class = "raisin-roll">
-          <a href="./original.html" class = "product-link">
+          <a href="./detail.html" class = "product-link">
             <div class = "link-content">
               <img class = "product-img" src = "assets/products/raisin-cinnamon-roll.jpg"
               alt = "Raisin cinnamon roll">
@@ -67,7 +67,7 @@
         </div>
 
         <div class = "walnut-roll">
-          <a href="./original.html" class = "product-link">
+          <a href="./detail.html" class = "product-link">
             <div class = "link-content">
               <img class = "product-img" src = "assets/products/walnut-cinnamon-roll.jpg"
               alt = "Walnut cinnamon roll">
@@ -78,7 +78,7 @@
         </div>
 
         <div class = "double-choc-roll">
-          <a href="./original.html" class = "product-link">
+          <a href="./detail.html" class = "product-link">
             <div class = "link-content">
               <img class = "product-img" src = "assets/products/double-chocolate-cinnamon-roll.jpg"
               alt = "Double chocolate cinnamon roll">
@@ -89,7 +89,7 @@
         </div>
         
         <div class = "strawberry-roll">
-          <a href="./original.html" class = "product-link">
+          <a href="./detail.html" class = "product-link">
             <div class = "link-content">
               <img class = "product-img" src = "assets/products/strawberry-cinnamon-roll.jpg"
               alt = "Strawberry cinnamon roll">
