mostly done configuring detail pages
header, image, and price should correspond to roll
each roll should go to its respective detail page

--- a/solution-hw4/detail.html
+++ b/solution-hw4/detail.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <title>Product Detail</title>
     <link rel="stylesheet" href="css/style.css">
-    <script defer src="js/detail.js"></script>
     <script defer src="js/rollsData.js"></script> 
+    <script defer src="js/detail.js"></script>
   </head> 
   
   <body>
@@ -30,8 +30,7 @@
 
     <main class = "product-detail-container">
     <!-- main container for all product detail information-->
-      <img class = "detail-img" src = "assets/products/original-cinnamon-roll.jpg"
-      alt = "Original cinnamon roll">
+      <img class = "detail-img" src = "" alt = "Original cinnamon roll">
 
       <div class = "detail-text-container">
         <!--all of the text next to the img is here-->
