--- a/solution-hw4/detail.html
+++ b/solution-hw4/detail.html
@@ -30,7 +30,7 @@
 
     <main class = "product-detail-container">
     <!-- main container for all product detail information-->
-      <img class = "detail-img" src = "" alt = "Original cinnamon roll">
+      <img class = "detail-img" src = "" alt = "">
 
       <div class = "detail-text-container">
         <!--all of the text next to the img is here-->
