added new cart js file and created 4 cart items

--- a/solution-hw5/Cart.html
+++ b/solution-hw5/Cart.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <title>Cart</title>
     <link rel="stylesheet" href="css/style.css">
+    <script defer src="js/rollsData.js"></script>
+    <script defer src="js/cart.js"></script>
   </head>
 
   <body>
