changed alt text, cleaned up code, ready to be submitted

--- a/solution-hw5/Cart.html
+++ b/solution-hw5/Cart.html
@@ -38,12 +38,12 @@
           <!--second level container for one row of cart item-->
             <div class = "cart-item-info">
             <!--container for roll img, info, and price-->
-              <img class = "cart-item-img" src = "assets/products/original-cinnamon-roll.jpg"
-              alt = "Original cinnamon roll">
+              <img class = "cart-item-img" src = " "
+              alt = " ">
               <div class = "cart-item-details"> 
-                <p id = "cart-item-name">Original Cinnamon Roll</p>
-                <p id = "cart-item-glazing">Glazing: Keep original</p>
-                <p id = "cart-item-pack-size">Pack size: 1</p>
+                <p id = "cart-item-name"> </p>
+                <p id = "cart-item-glazing"> </p>
+                <p id = "cart-item-pack-size"> </p>
               </div>
               <p id = "cart-item-price">$2.49</p>
             </div>
@@ -53,22 +53,6 @@
             </div>
           </div>
         </template>
-      </div>
-
-      <div class = "cart-item">
-        <div class = "cart-item-info">
-          <img class = "cart-item-img" src = "assets/products/double-chocolate-cinnamon-roll.jpg"
-          alt = "Double chocolate cinnamon roll">
-          <div class = "cart-item-details">
-            <p>Double Chocolate Cinnamon Rolls</p>
-            <p>Glazing: Sugar milk</p>
-            <p>Pack size: 6</p>
-          </div>
-          <p class = "cart-item-price">$27.45</p>
-        </div>
-        <div>
-            <button id = "item-remove-btn">Remove</button>
-        </div>
       </div>
 
       <hr id = "cart-bottom-line"> 
