--- a/solution-hw6/detail.html
+++ b/solution-hw6/detail.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <script defer src="js/rollsData.js"></script> 
     <script defer src="js/detail.js"></script>
+    <script defer src="js/cart-badge.js"></script>
   </head> 
   
   <body>
