--- a/solution-hw6/index.html
+++ b/solution-hw6/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8"> 
     <title>Product Gallery</title> 
     <link rel="stylesheet" href="css/style.css"> 
+    <script defer src="js/cart-badge.js"></script>
   </head>
   
   <body>
