fixed issues with cart number reverting to 2 because of html file

--- a/solution-hw6/detail.html
+++ b/solution-hw6/detail.html
@@ -22,7 +22,7 @@
         <nav>
           <a href="./index.html" class = "products-nav on-page">PRODUCTS</a>
           <a href="./Cart.html" class = "cart-nav">CART</a>
-          <span class = "cart-badge">2</span>
+          <span class = "cart-badge"> </span>
         </nav>
         <hr id = "logo-line">
         <h1 class = "header-title"></h1>
