--- a/solution-hw6/Cart.html
+++ b/solution-hw6/Cart.html
@@ -22,7 +22,7 @@
         <nav>
           <a href="./index.html" class = "products-nav">PRODUCTS</a>
           <a href="./Cart.html" class = "cart-nav on-page">CART</a>
-          <span class = "cart-badge">2</span>
+          <span class = "cart-badge"> </span>
         </nav>
         <hr id = "logo-line">
         <h1 class = "header-title">Shopping cart</h1>
