fixed html code

--- a/solution-hw6/Cart.html
+++ b/solution-hw6/Cart.html
@@ -46,7 +46,7 @@
                 <p id = "cart-item-glazing"> </p>
                 <p id = "cart-item-pack-size"> </p>
               </div>
-              <p id = "cart-item-price">$2.49</p>
+              <p id = "cart-item-price"></p>
             </div>
             <div>
             <!--container for remove option-->
@@ -61,7 +61,7 @@
 
       <div class = "total-price-container">
         <p class = "total-text">Total</p>
-        <p id = "total-price-text">$29.94</p>
+        <p id = "total-price-text"></p>
       </div>
 
       <button class = "checkout-btn">
